--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "multer": "^2.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -23,7 +24,6 @@
     "@types/node": "^22.14.0",
     "@types/cors": "^2.8.17",
     "typescript": "~5.8.2",
-    "ts-node": "^10.9.2",
-    "prisma": "^5.22.0"
+    "ts-node": "^10.9.2"
   }
 }
