--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "multer": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -24,6 +27,9 @@
     "@types/node": "^22.14.0",
     "@types/cors": "^2.8.17",
     "typescript": "~5.8.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.14"
   }
 }
