--- a/server/package.json
+++ b/server/package.json
@@ -6,30 +6,38 @@
     "dev": "node --loader ts-node/esm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "migrate": "prisma migrate dev",
     "migrate:prod": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "express": "^4.21.2",
-    "multer": "^2.0.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "prisma": "^5.22.0",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.13"
+    "multer": "^2.0.2",
+    "nodemailer": "^6.9.13",
+    "prisma": "^5.22.0",
+    "sharp": "^0.34.5",
+    "winston": "^3.19.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.14.0",
-    "@types/cors": "^2.8.17",
-    "typescript": "~5.8.2",
+    "@types/nodemailer": "^6.4.14",
     "ts-node": "^10.9.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/nodemailer": "^6.4.14"
+    "typescript": "~5.8.2"
   }
 }
