--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,10 +28,28 @@ services:
     expose:
       - "3000"
     environment:
+      # Server Configuration
       NODE_ENV: ${NODE_ENV:-production}
       PORT: 3000
+      
+      # Database
       DATABASE_URL: postgresql://${DB_USER:-estilovivo}:${DB_PASSWORD:-changeme}@db:5432/${DB_NAME:-estilovivo}?schema=public
+      
+      # Authentication (CRITICAL - must be set in Coolify or will use default)
+      JWT_SECRET: ${JWT_SECRET:-1713cd2057028b1dbbc5cd0b44b4106a0df1dcb66eb058763d09bf6de9ed733c}
+      JWT_EXPIRES_IN: ${JWT_EXPIRES_IN:-7d}
+      
+      # CORS (use SERVICE_FQDN_APP from Coolify)
+      CORS_ORIGIN: ${CORS_ORIGIN:-${SERVICE_URL_APP:-http://localhost:3000}}
+      
+      # Uploads
       UPLOADS_DIR: /app/uploads
+      
+      # Optional: SMTP (for password recovery)
+      SMTP_HOST: ${SMTP_HOST:-}
+      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_USER: ${SMTP_USER:-}
+      SMTP_PASS: ${SMTP_PASS:-}
     volumes:
       # Almacenamiento persistente
       - uploads_data:/app/uploads
