--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ services:
     image: postgres:16-alpine
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${DB_USER:-estilovivo}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-changeme}
-      POSTGRES_DB: ${DB_NAME:-estilovivo}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
       POSTGRES_INITDB_ARGS: "--encoding=UTF8"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-estilovivo}" ]
+      test: [ "CMD-SHELL", "pg_isready -U estilovivo" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -23,23 +23,23 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: ${DOCKER_TARGET:-production}
+      target: production
     restart: unless-stopped
     expose:
       - "3000"
     environment:
       # Server Configuration
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: ${NODE_ENV}
       PORT: 3000
       
       # Database
-      DATABASE_URL: postgresql://${DB_USER:-estilovivo}:${DB_PASSWORD:-changeme}@db:5432/${DB_NAME:-estilovivo}?schema=public
+      DATABASE_URL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}?schema=public
       
-      # Authentication (CRITICAL - must be set in Coolify or will use default)
-      JWT_SECRET: ${JWT_SECRET:-1713cd2057028b1dbbc5cd0b44b4106a0df1dcb66eb058763d09bf6de9ed733c}
+      # Authentication
+      JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRES_IN: 7d
       
-      # CORS (Coolify provides SERVICE_URL_APP automatically)
+      # CORS
       CORS_ORIGIN: ${SERVICE_URL_APP}
       
       # Uploads
@@ -47,11 +47,9 @@ services:
       
       # Optional: SMTP (for password recovery)
       SMTP_HOST: ${SMTP_HOST}
-      SMTP_PORT: ${SMTP_PORT:-587}
+      SMTP_PORT: ${SMTP_PORT}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
-      SMTP_USER: ${SMTP_USER:-}
-      SMTP_PASS: ${SMTP_PASS:-}
     volumes:
       # Almacenamiento persistente
       - uploads_data:/app/uploads
